added testing button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MobileAssignment</string>
     <string name="HelloWorld">Hello World</string>
+    <string name="testingBtn">testingXr</string>
 </resources>
