--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MobileAssignment</string>
     <string name="HelloWorld">Hello World</string>
     <string name="testingBtn">testingXr</string>
+    <string name="testallex">test alex</string>
 </resources>
