--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="headtitle">Eat Heal</string>
-    <!-- TODO: Remove or change this placeholder text -->、
     <string name="menu_homepage">Homepage</string>
     <string name="menu_menu">Menu</string>
     <string name="menu_recommendation">Recommendation</string>
@@ -77,4 +76,5 @@
     <string name="mealPlanWeek">Meal For This Week</string>
     <string name="eatHeal">Eat Heal</string>
     <string name="slogan">Eat Right Be Bright</string>
+    <string name="edit">Edit</string>
 </resources>
