--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ic_home">Homepage</string>
     <string name="titleLbl">Homepage</string>
-    <string name="ic_menuAdmin">ic_menu</string>
-    <string name="ic_orderAdmin">ic_order</string>
-    <string name="ic_recommendationAdmin">ic_recommendation</string>
+    <string name="ic_menuAdmin">Menu</string>
+    <string name="ic_orderAdmin">Order</string>
+    <string name="ic_recommendationAdmin">Recommendation</string>
     <string name="changeRole">Change Role</string>
     <string name="addNewRec">Add New</string>
     <string name="recName">Recommendation Name</string>
