--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MobileAssignment</string>
+    <string name="app_name">Eat Heal</string>
     <string name="HelloWorld">Hello World</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
